feat: add dynamic data change by input selection

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     </div>
     <nav>
 
-      <input type="radio" name="timeframes" id="timeChoice1" value="daily">
-      <label for="timeChoice1">Daily</label>
+      <input type="radio" name="timeframes" id="daily" value="daily">
+      <label for="daily">Daily</label>
 
-      <input type="radio" name="timeframes" id="timeChoice2" value="weekly" checked>
-      <label for="timeChoice2">Weekly</label>
+      <input type="radio" name="timeframes" id="weekly" value="weekly" checked>
+      <label for="weekly">Weekly</label>
 
-      <input type="radio" name="timeframes" id="timeChoice3" value="monthly">
-      <label for="timeChoice3">Monthly</label>
+      <input type="radio" name="timeframes" id="monthly" value="monthly">
+      <label for="monthly">Monthly</label>
 
     </nav>
   </header>
@@ -127,7 +127,7 @@
     <article class="card selfCare">
       <div class="card-data">
         <div class="card-data_header">
-          <strong>Self care</strong>
+          <strong>Self Care</strong>
           <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -149,6 +149,7 @@
     <span>Coded by <a href="https://github.com/FacundoDLR" target="_blank">FACUNDO A. DE LOS RIOS</a>.</span>
   </footer>
 
+  <script src="./script.js"></script>
 </body>
 
 </html>
