feat: improvement in javascript code using fetch

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     </div>
     <nav>
 
-      <input type="radio" name="timeframes" id="daily" value="daily">
+      <input type="radio" name="timeframes" id="daily" value="daily" checked>
       <label for="daily">Daily</label>
 
-      <input type="radio" name="timeframes" id="weekly" value="weekly" checked>
+      <input type="radio" name="timeframes" id="weekly" value="weekly" >
       <label for="weekly">Weekly</label>
 
-      <input type="radio" name="timeframes" id="monthly" value="monthly">
+      <input type="radio" name="timeframes" id="monthly" value="monthly" >
       <label for="monthly">Monthly</label>
 
     </nav>
