feat: mobile design, first look ready

--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
 
   <header>
     <div class="user-data">
-      <img src="./images/image-jeremy.png" alt="">
+
       <div class="user-data_info">
-        <p>Report for</p>
-        <h1>Jeremy Robson</h1>
+
+        <img src="./images/image-jeremy.png" alt="">
+
+        <div class="user-data_infoName">
+          <p>Report for</p>
+          <h1>Jeremy Robson</h1>
+        </div>
+
       </div>
+
     </div>
     <nav>
 
@@ -40,11 +47,17 @@
       <label for="monthly">Monthly</label>
 
     </nav>
+
   </header>
 
   <main>
 
     <article class="card work">
+      <div class="card-color">
+        <figure>
+          <img src="./images/icon-work.svg" alt="">
+        </figure>
+      </div>
       <div class="card-data">
         <div class="card-data_header">
           <strong>Work</strong>
@@ -61,6 +74,11 @@
     </article>
 
     <article class="card play">
+      <div class="card-color">
+        <figure>
+          <img src="./images/icon-play.svg" alt="">
+        </figure>
+      </div>
       <div class="card-data">
         <div class="card-data_header">
           <strong>Play</strong>
@@ -77,6 +95,11 @@
     </article>
 
     <article class="card study">
+      <div class="card-color">
+        <figure>
+          <img src="./images/icon-study.svg" alt="">
+        </figure>
+      </div>
       <div class="card-data">
         <div class="card-data_header">
           <strong>Study</strong>
@@ -93,6 +116,11 @@
     </article>
 
     <article class="card exercise">
+      <div class="card-color">
+        <figure>
+          <img src="./images/icon-exercise.svg" alt="">
+        </figure>
+      </div>
       <div class="card-data">
         <div class="card-data_header">
           <strong>Exercise</strong>
@@ -109,6 +137,11 @@
     </article>
 
     <article class="card social">
+      <div class="card-color">
+        <figure>
+          <img src="./images/icon-social.svg" alt="">
+        </figure>
+      </div>
       <div class="card-data">
         <div class="card-data_header">
           <strong>Social</strong>
@@ -125,6 +158,11 @@
     </article>
 
     <article class="card selfCare">
+      <div class="card-color">
+        <figure>
+          <img src="./images/icon-self-care.svg" alt="">
+        </figure>
+      </div>
       <div class="card-data">
         <div class="card-data_header">
           <strong>Self Care</strong>
