fix: add SEO metatags and minor fixes in javascript

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="https://time-tracking-dashboard-omega-gilt.vercel.app/images/favicon-32x32.png">
+  <link rel="apple-touch-icon" href="https://time-tracking-dashboard-omega-gilt.vercel.app/images/favicon-32x32.png"
+    type="image/x-icon">
+  <meta name="theme-color" content="#FF6600">
 
   <title>Frontend Mentor | Time tracking dashboard</title>
+
+  <meta property="og:description" content="" />
+  <meta property="og:image"
+    content="https://time-tracking-dashboard-omega-gilt.vercel.app/design/desktop-preview.jpg" />
+  <meta property="og:url" content="https://time-tracking-dashboard-omega-gilt.vercel.app/" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="author" content="FACUNDO A. DE LOS RIOS">
+  <meta name="description" content="time tracking display board. daily, weekly and monthly monitoring.">
 
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +38,7 @@
 
         <div class="user-data_info">
 
-          <img src="./images/image-jeremy.png" alt="">
+          <img src="https://time-tracking-dashboard-omega-gilt.vercel.app//images/image-jeremy.png" alt="">
 
           <div class="user-data_infoName">
             <p>Report for</p>
