fix: HTML accessibility fixes and minor CSS and JS fixes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 
-  <section>
+  <div class="main-container" role="main">
 
     <header>
       <div class="user-data">
@@ -73,7 +73,7 @@
         </div>
         <div class="card-data">
           <div class="card-data_header">
-            <strong>Work</strong>
+            <h2><strong>Work</strong></h2>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -81,7 +81,7 @@
             </svg>
           </div>
           <div class="card-data_info">
-            <strong id="currentHrs">32hrs</strong> <span id="previousHrs">Last Week - 36hrs</span>
+            <strong class="currentHrs">32hrs</strong> <span class="previousHrs">Last Week - 36hrs</span>
           </div>
         </div>
       </article>
@@ -94,7 +94,7 @@
         </div>
         <div class="card-data">
           <div class="card-data_header">
-            <strong>Play</strong>
+            <h2><strong>Play</strong></h2>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -102,7 +102,7 @@
             </svg>
           </div>
           <div class="card-data_info">
-            <strong id="currentHrs">10hrs</strong> <span id="previousHrs">Last Week - 8hrs</span>
+            <strong class="currentHrs">10hrs</strong> <span class="previousHrs">Last Week - 8hrs</span>
           </div>
         </div>
       </article>
@@ -115,7 +115,7 @@
         </div>
         <div class="card-data">
           <div class="card-data_header">
-            <strong>Study</strong>
+            <h2><strong>Study</strong></h2>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -123,7 +123,7 @@
             </svg>
           </div>
           <div class="card-data_info">
-            <strong id="currentHrs">4hrs</strong> <span id="previousHrs">Last Week - 7hrs</span>
+            <strong class="currentHrs">4hrs</strong> <span class="previousHrs">Last Week - 7hrs</span>
           </div>
         </div>
       </article>
@@ -136,7 +136,7 @@
         </div>
         <div class="card-data">
           <div class="card-data_header">
-            <strong>Exercise</strong>
+            <h2><strong>Exercise</strong></h2>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -144,7 +144,7 @@
             </svg>
           </div>
           <div class="card-data_info">
-            <strong id="currentHrs">4hrs</strong> <span id="previousHrs">Last Week - 5hrs</span>
+            <strong class="currentHrs">4hrs</strong> <span class="previousHrs">Last Week - 5hrs</span>
           </div>
         </div>
       </article>
@@ -157,7 +157,7 @@
         </div>
         <div class="card-data">
           <div class="card-data_header">
-            <strong>Social</strong>
+            <h2><strong>Social</strong></h2>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -165,7 +165,7 @@
             </svg>
           </div>
           <div class="card-data_info">
-            <strong id="currentHrs">5hrs</strong> <span id="previousHrs">Last Week - 10hrs</span>
+            <strong class="currentHrs">5hrs</strong> <span class="previousHrs">Last Week - 10hrs</span>
           </div>
         </div>
       </article>
@@ -178,7 +178,7 @@
         </div>
         <div class="card-data">
           <div class="card-data_header">
-            <strong>Self Care</strong>
+            <h2><strong>Self Care</strong></h2>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -186,14 +186,14 @@
             </svg>
           </div>
           <div class="card-data_info">
-            <strong id="currentHrs">2hrs</strong> <span id="previousHrs">Last Week - 2hrs</span>
+            <strong class="currentHrs">2hrs</strong> <span class="previousHrs">Last Week - 2hrs</span>
           </div>
         </div>
       </article>
 
     </main>
 
-  </section>
+  </div>
 
 
   <footer class="attribution">
