I added some improvements.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
           <div class="user-data_infoName">
             <p>Report for</p>
-            <h1>Jeremy Robson</h1>
+            <h1>Jeremy <span class="user-data_name">Robson</span></h1>
           </div>
 
         </div>
